Implementation of libcint that should also compile using MSVC

--- a/doc/program_ref.tex
+++ b/doc/program_ref.tex
@@ -275,7 +275,7 @@ call CINTdel_optimizer(opt)
   parameters are the same to the C function. Note that those offsets
   atm(2,i) bas(6,i) bas(7,i) are 0-based.
 \item
-  buf is 2D/4D double precision/double complex array
+  buf is 2D/4D double precision/cint_complex array
 \item
   opt: an integer(8) to hold the address of so called ``optimizer'', it
   needs to be intialized by
